welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:5: error: value &&! is not a member of Boolean
  while (!estSurBiscuit()&&!estFaceMur())
                         ^DwarfCode:11: error: value &&! is not a member of Boolean
  while (!estSurBiscuit()&&!estFaceMur())
                         ^